--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,7 +11,7 @@ import IconLinkedin from './icons/IconLinkedin.astro'
         <nav class="flex w-full justify-center">
 
             <div class="flex w-full sm:justify-start items-center">
-                <a href="cvdeveloper-eng.pdf" target="_blank" class="bg-blue-950 text-white p-2 rounded dark:bg-blue-700 hover:transition-transform duration-300 transform hover:scale-105">
+                <a href="cvdeveloper-spa-jsm.pdf" target="_blank" class="bg-blue-950 text-white p-2 rounded dark:bg-blue-700 hover:transition-transform duration-300 transform hover:scale-105">
                     <span class="hidden lg:inline">Curriculum Vitae</span>
                     <span class="lg:hidden">CV</span>
                 </a>
